# test_auto_trading

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_TRACKING.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  verify_generator_temp.py  verify_hurst.py
.github/workflows/: test.yml
scripts/: backtest.py  benchmark_hurst.py  benchmark_inference.py  generate_audit_dump.py  infer.py  train.py  tune.py  verify_generator.py
src/backtest/: __init__.py  engine.py  metrics.py  walk_forward.py
src/connectors/: __init__.py
src/connectors/deriv/: __init__.py  auth.py  client.py  exceptions.py  ingest.py  rate_limiter.py  storage.py
src/data/: __init__.py  dataset.py  features.py  labels.py  sampler.py  store_adapter.py
src/features/: catalog.json  generator.py
src/models/: bilstm_encoder.py  calibration.py  calibration_bundle.py  cnn_extractor.py  composite.py  conditioning.py  conformal.py  drift.py  ensemble.py  heads.py  hybrid_tft.py  meta_learner.py  tft_attention.py
src/observability/: __init__.py  logging.py  metrics.py
src/risk/: __init__.py  manager.py
src/training/: __init__.py  config.py  ddp.py  losses.py  trainer.py  tuning.py
src/utils/: integrity.py
tests/: conftest.py  test_backtest.py  test_benchmark_inference.py  test_calibration.py  test_conformal.py  test_data_layer.py  test_deriv_connector.py  test_deriv_ingest.py  test_drift.py  test_feature_generator.py  test_integrity.py  test_models.py  test_models_fixes.py  test_observability.py  test_pipeline_endtoend.py  test_risk_manager.py  test_training_layer.py  test_tuning.py
