[project]
name = "ml-signal-engine"
version = "0.1.0"
description = "Sistema híbrido ML para señales PUT/CALL con arquitectura Ensemble (CNN, BiLSTM, TFT, XGBoost)"
authors = [{ name = "AI Quant", email = "quant@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies =[
    "torch>=2.2.1",
    "scikit-learn>=1.4.1",
    "xgboost>=2.0.3",
    "lightgbm>=4.3.0",
    "pandas-ta>=0.3.14b0",
    "TA-Lib>=0.4.28",
    "shap>=0.45.0",
    "mlflow>=2.11.1",
    "optuna>=3.5.0",
    "pytorch-forecasting>=1.0.0",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "scipy>=1.12.0",
    "pytest>=8.1.1",
    "matplotlib>=3.8.3",
    "pydantic>=2.6.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]